# Folder_analyzer

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
files_util/: FilesUtil.cpp  FilesUtil.h  files_util.cpp  files_util.h
files_util/StringSearcher/: StringSearcher.cpp  StringSearcher.h
files_util/TrigramsContainer/: TrigramsContainer.cpp  TrigramsContainer.h
files_util/TrigramsExtracter/: TrigramsExtracter.cpp  TrigramsExtracter.h
indexingdialog/: indexingdialog.cpp  indexingdialog.h  indexingdialog.ui
